fixed authentication issue of swagger
